@@ -105,6 +105,9 @@ GtkMenuItem *menuitem_view_aspect_sixteen_nine;
 GtkMenuItem *menuitem_view_aspect_sixteen_ten;
 GtkMenuItem *menuitem_view_sep2;
 GtkMenuItem *menuitem_view_subtitles;
+GtkMenuItem *menuitem_view_smaller_subtitle;
+GtkMenuItem *menuitem_view_larger_subtitle;
+GtkMenuItem *menuitem_view_sep5;
 GtkMenuItem *menuitem_view_angle;
 GtkMenuItem *menuitem_view_controls;
 GtkMenuItem *menuitem_view_sep3;
